--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "entity.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel ./index.html --port 4321"
+    "start": "parcel ./index.html --port 4321",
+    "predeploy": "rm -rf dist && parcel build index.html --public--url /parcel-gh-pages-deploy",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
